fix shell script, make experiment tuning config call more generalizable

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-15T18:21:21.806233Z",
-     "start_time": "2025-06-15T18:21:21.719544Z"
+     "end_time": "2025-06-16T14:07:32.539719Z",
+     "start_time": "2025-06-16T14:07:32.511382Z"
     }
    },
    "source": [
@@ -16,7 +16,7 @@
     "%autoreload 2"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -24,8 +24,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-15T18:21:22.544264Z",
-     "start_time": "2025-06-15T18:21:22.520137Z"
+     "end_time": "2025-06-16T14:07:33.861261Z",
+     "start_time": "2025-06-16T14:07:33.797179Z"
     }
    },
    "source": [
@@ -37,7 +37,7 @@
     "\n"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -45,8 +45,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-15T18:21:23.793742Z",
-     "start_time": "2025-06-15T18:21:23.749219Z"
+     "end_time": "2025-06-16T14:07:35.657110Z",
+     "start_time": "2025-06-16T14:07:35.012872Z"
     }
    },
    "source": [
@@ -54,7 +54,7 @@
     "set_random_seed(0)"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -62,8 +62,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-15T18:21:24.821224Z",
-     "start_time": "2025-06-15T18:21:24.783587Z"
+     "end_time": "2025-06-16T14:07:36.626988Z",
+     "start_time": "2025-06-16T14:07:36.585420Z"
     }
    },
    "source": [
@@ -78,13 +78,13 @@
     "paramconfig = load_config(Path('config') / 'datasets' / 'OPTIMAL_HYPERPARAS.yaml')\n"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-15T18:25:31.427481Z",
-     "start_time": "2025-06-15T18:25:31.398880Z"
+     "end_time": "2025-06-16T14:07:39.151485Z",
+     "start_time": "2025-06-16T14:07:37.796441Z"
     }
    },
    "cell_type": "code",
@@ -104,14 +104,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-15 20:25:31,424 | INFO | Experiment created at: 2025-06-15-20-25\n",
-      "2025-06-15 20:25:31,425 | INFO | Task: pd\n",
-      "2025-06-15 20:25:31,425 | INFO | Dataset: 01_gmsc\n",
-      "2025-06-15 20:25:31,425 | INFO | CV splits: 3\n"
+      "2025-06-16 16:07:39,135 | INFO | Experiment created at: 2025-06-16-16-07\n",
+      "2025-06-16 16:07:39,136 | INFO | Task: pd\n",
+      "2025-06-16 16:07:39,136 | INFO | Dataset: 01_gmsc\n",
+      "2025-06-16 16:07:39,137 | INFO | CV splits: 3\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -119,8 +119,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-15T18:25:44.594095Z",
-     "start_time": "2025-06-15T18:25:44.478003Z"
+     "end_time": "2025-06-16T14:07:40.550806Z",
+     "start_time": "2025-06-16T14:07:40.204003Z"
     }
    },
    "source": [
@@ -131,50 +131,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-15 20:25:44,543 | INFO | 01_gmsc loaded\n",
-      "2025-06-15 20:25:44,544 | INFO | Dataset has 150000 rows. Subsampling to 30000 rows.\n",
-      "2025-06-15 20:25:44,548 | INFO | Inducing class imbalance with ratio 0.1 ...\n",
-      "2025-06-15 20:25:44,548 | INFO | Class distribution BEFORE imbalance: {0: 935, 1: 65}\n",
-      "2025-06-15 20:25:44,549 | INFO | Majority class: 0, Minority class: 1\n",
-      "2025-06-15 20:25:44,549 | INFO | Will keep 65 of 65 minority samples (ratio 0.1)\n",
-      "2025-06-15 20:25:44,550 | INFO | Class distribution AFTER imbalance: {0: 935, 1: 65}\n",
-      "2025-06-15 20:25:44,550 | INFO | Total samples: 1000\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "01_gmsc preprocessed\n",
-      "x shape:  (1000, 10)\n",
-      "y shape:  (1000,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Cross-validation loop::   0%|          | 0/3 [00:00<?, ?it/s]2025-06-15 20:25:44,554 | INFO | Imputed missing values with (num: median) and (cat: mode)\n",
+      "2025-06-16 16:07:40,274 | INFO | 01_gmsc loaded\n",
+      "2025-06-16 16:07:40,274 | INFO | Dataset has 150000 rows. Subsampling to 10000 rows.\n",
+      "2025-06-16 16:07:40,278 | INFO | 01_gmsc preprocessed\n",
+      "2025-06-16 16:07:40,279 | INFO | x shape: (10000, 10)\n",
+      "2025-06-16 16:07:40,279 | INFO | y shape: (10000,)\n",
+      "Cross-validation loop::   0%|          | 0/3 [00:00<?, ?it/s]2025-06-16 16:07:40,306 | INFO | Imputed missing values with (num: median) and (cat: mode)\n",
+      "2025-06-16 16:07:40,308 | INFO | Data preprocessing finished\n",
+      "2025-06-16 16:07:40,308 | INFO | Tuning tabpfn\n",
+      "2025-06-16 16:07:40,308 | INFO | Creating classifier with method: tabpfn\n",
       "Cross-validation loop::   0%|          | 0/3 [00:00<?, ?it/s]\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'logger' is not defined",
+     "ename": "TypeError",
+     "evalue": "TabPFNClassifier.__init__() got an unexpected keyword argument 'param_grid'",
      "output_type": "error",
      "traceback": [
       "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[10]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m experiment.run()\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~/Documents/Studium/3. Semester/tabpfn_credit_codebase/src/classes/experiment.py:117\u001B[39m, in \u001B[36mrun\u001B[39m\u001B[34m(self)\u001B[39m\n\u001B[32m    114\u001B[39m     \u001B[38;5;28mself\u001B[39m.data.split_data()\n\u001B[32m    115\u001B[39m     \u001B[38;5;28mself\u001B[39m.train_evaluate()\n\u001B[32m--> \u001B[39m\u001B[32m117\u001B[39m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34mtrain_evaluate\u001B[39m(\u001B[38;5;28mself\u001B[39m):\n\u001B[32m    118\u001B[39m     results = {}\n\u001B[32m    119\u001B[39m     tuned_hyperparams = {}\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~/Documents/Studium/3. Semester/tabpfn_credit_codebase/src/classes/experiment.py:131\u001B[39m, in \u001B[36mtrain_evaluate\u001B[39m\u001B[34m(self)\u001B[39m\n\u001B[32m      0\u001B[39m <Error retrieving source code with stack_data see ipython/ipython#13598>\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~/Documents/Studium/3. Semester/tabpfn_credit_codebase/src/classes/experiment.py:218\u001B[39m, in \u001B[36m_preprocess_data\u001B[39m\u001B[34m(self, x_train, x_val, x_test, y_train, y_val, y_test)\u001B[39m\n\u001B[32m    213\u001B[39m x_train, x_val, x_test, y_train, y_val, y_test = standardize_data(\n\u001B[32m    214\u001B[39m     x_train, x_val, x_test, y_train, y_val, y_test, \u001B[38;5;28mself\u001B[39m.methodconfig)\n\u001B[32m    216\u001B[39m logger.info(\u001B[33mf\u001B[39m\u001B[33m'\u001B[39m\u001B[33mData preprocessing finished\u001B[39m\u001B[33m'\u001B[39m)\n\u001B[32m--> \u001B[39m\u001B[32m218\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m x_train, x_val, x_test, y_train, y_val, y_test\n",
-      "\u001B[31mNameError\u001B[39m: name 'logger' is not defined"
+      "\u001B[31mTypeError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[6]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m experiment.run()\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~/Documents/Studium/3. Semester/tabpfn_credit_codebase/src/classes/experiment.py:115\u001B[39m, in \u001B[36mExperiment.run\u001B[39m\u001B[34m(self)\u001B[39m\n\u001B[32m    113\u001B[39m \u001B[38;5;28mself\u001B[39m.data.load_preprocess_data()\n\u001B[32m    114\u001B[39m \u001B[38;5;28mself\u001B[39m.data.split_data()\n\u001B[32m--> \u001B[39m\u001B[32m115\u001B[39m \u001B[38;5;28mself\u001B[39m.train_evaluate()\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~/Documents/Studium/3. Semester/tabpfn_credit_codebase/src/classes/experiment.py:166\u001B[39m, in \u001B[36mExperiment.train_evaluate\u001B[39m\u001B[34m(self)\u001B[39m\n\u001B[32m    164\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m.config.task == \u001B[33m'\u001B[39m\u001B[33mpd\u001B[39m\u001B[33m'\u001B[39m:\n\u001B[32m    165\u001B[39m     logging.info(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mCreating classifier with method: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mmethod\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n\u001B[32m--> \u001B[39m\u001B[32m166\u001B[39m     model = \u001B[38;5;28mself\u001B[39m.model_factory.create_classifier(method, tuned_hyperparams[method])\n\u001B[32m    167\u001B[39m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m    168\u001B[39m     logging.info(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mCreating regressor with method: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mmethod\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~/Documents/Studium/3. Semester/tabpfn_credit_codebase/src/classes/models/models.py:142\u001B[39m, in \u001B[36mModels.create_classifier\u001B[39m\u001B[34m(method, params)\u001B[39m\n\u001B[32m     90\u001B[39m \u001B[38;5;250m\u001B[39m\u001B[33;03m\"\"\"\u001B[39;00m\n\u001B[32m     91\u001B[39m \u001B[33;03mCreates and returns a machine learning classifier based on the specified method and parameters.\u001B[39;00m\n\u001B[32m     92\u001B[39m \n\u001B[32m   (...)\u001B[39m\u001B[32m    120\u001B[39m \u001B[33;03m    the provided parameters.\u001B[39;00m\n\u001B[32m    121\u001B[39m \u001B[33;03m\"\"\"\u001B[39;00m\n\u001B[32m    122\u001B[39m models = {\n\u001B[32m    123\u001B[39m     \u001B[33m'\u001B[39m\u001B[33mab\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: AdaBoostClassifier(random_state=\u001B[32m0\u001B[39m, **p),\n\u001B[32m    124\u001B[39m     \u001B[33m'\u001B[39m\u001B[33mann\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: NNClassifier(**p),\n\u001B[32m   (...)\u001B[39m\u001B[32m    140\u001B[39m     \u001B[33m'\u001B[39m\u001B[33mxgb\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: XGBClassifier(random_state=\u001B[32m0\u001B[39m, **p)\n\u001B[32m    141\u001B[39m }\n\u001B[32m--> \u001B[39m\u001B[32m142\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m models[method](params)\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~/Documents/Studium/3. Semester/tabpfn_credit_codebase/src/classes/models/models.py:137\u001B[39m, in \u001B[36mModels.create_classifier.<locals>.<lambda>\u001B[39m\u001B[34m(p)\u001B[39m\n\u001B[32m     88\u001B[39m \u001B[38;5;129m@staticmethod\u001B[39m\n\u001B[32m     89\u001B[39m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34mcreate_classifier\u001B[39m(method: \u001B[38;5;28mstr\u001B[39m, params: Dict[\u001B[38;5;28mstr\u001B[39m, Any]) -> Any:\n\u001B[32m     90\u001B[39m \u001B[38;5;250m    \u001B[39m\u001B[33;03m\"\"\"\u001B[39;00m\n\u001B[32m     91\u001B[39m \u001B[33;03m    Creates and returns a machine learning classifier based on the specified method and parameters.\u001B[39;00m\n\u001B[32m     92\u001B[39m \n\u001B[32m   (...)\u001B[39m\u001B[32m    120\u001B[39m \u001B[33;03m        the provided parameters.\u001B[39;00m\n\u001B[32m    121\u001B[39m \u001B[33;03m    \"\"\"\u001B[39;00m\n\u001B[32m    122\u001B[39m     models = {\n\u001B[32m    123\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mab\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: AdaBoostClassifier(random_state=\u001B[32m0\u001B[39m, **p),\n\u001B[32m    124\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mann\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: NNClassifier(**p),\n\u001B[32m    125\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mbnb\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: BernoulliNB(**p),\n\u001B[32m    126\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mcb\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: CatBoostClassifier(random_state=\u001B[32m0\u001B[39m, **p),\n\u001B[32m    127\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mdt\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: DecisionTreeClassifier(random_state=\u001B[32m0\u001B[39m, **p),\n\u001B[32m    128\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mgnb\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: GaussianNB(),\n\u001B[32m    129\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mknn\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: KNeighborsClassifier(**p),\n\u001B[32m    130\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mlda\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: LinearDiscriminantAnalysis(),\n\u001B[32m    131\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mlgbm\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: LGBMClassifier(random_state=\u001B[32m0\u001B[39m, verbose=-\u001B[32m1\u001B[39m, **p),\n\u001B[32m    132\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mlr\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: LogisticRegression(random_state=\u001B[32m0\u001B[39m, solver=\u001B[33m'\u001B[39m\u001B[33mliblinear\u001B[39m\u001B[33m'\u001B[39m, **p),\n\u001B[32m    133\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mrf\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: RandomForestClassifier(random_state=\u001B[32m0\u001B[39m, **p),\n\u001B[32m    134\u001B[39m         \u001B[33m'\u001B[39m\u001B[33msvm\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: SVC(random_state=\u001B[32m0\u001B[39m, probability=\u001B[38;5;28;01mTrue\u001B[39;00m, **p),\n\u001B[32m    135\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mtabnet\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: TabNetClassifier(verbose=\u001B[32m0\u001B[39m, optimizer_fn=torch.optim.Adam,\n\u001B[32m    136\u001B[39m                                              scheduler_fn=torch.optim.lr_scheduler.StepLR, **p),\n\u001B[32m--> \u001B[39m\u001B[32m137\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mtabpfn\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: TabPFNClassifier(**p),\n\u001B[32m    138\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mtabpfn_rf\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: tabpfn_create_classifier(\u001B[33m'\u001B[39m\u001B[33mtabpfn_rf\u001B[39m\u001B[33m'\u001B[39m, **p),\n\u001B[32m    139\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mtabpfn_hpo\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: tabpfn_create_classifier(\u001B[33m'\u001B[39m\u001B[33mtabpfn_hpo\u001B[39m\u001B[33m'\u001B[39m, **p),\n\u001B[32m    140\u001B[39m         \u001B[33m'\u001B[39m\u001B[33mxgb\u001B[39m\u001B[33m'\u001B[39m: \u001B[38;5;28;01mlambda\u001B[39;00m p: XGBClassifier(random_state=\u001B[32m0\u001B[39m, **p)\n\u001B[32m    141\u001B[39m     }\n\u001B[32m    142\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m models[method](params)\n",
+      "\u001B[31mTypeError\u001B[39m: TabPFNClassifier.__init__() got an unexpected keyword argument 'param_grid'"
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 6
   },
   {
    "cell_type": "code",
