fixing class imbalance adding SMOTE for oversampling. fixing bug in experiment.py related to tabpf_hpo parameter. adding columns to final results adding streamlit application first sketches

--- a/APA first notebook.ipynb
+++ b/APA first notebook.ipynb
@@ -2291,11 +2291,114 @@
     }
    ],
    "source": [
-    "x = np.random.randn(1000, 10)\n",
-    "y = np.array([0]*900 + [1]*100)\n",
-    "x_imb, y_imb = induce_class_imbalance(x, y, imbalance_ratio=0.1)\n",
-    "print('Class 0:', np.sum(y_imb == 0), 'Class 1:', np.sum(y_imb == 1))\n"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e0312145",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "\n",
+    "def _introduce_class_imbalance(x, y, imbalance_ratio=0.1, random_state=0):\n",
+    "    \"\"\"\n",
+    "    Create artificial class imbalance in the dataset. Downsamples or oversamples\n",
+    "    the minority class to reach the desired imbalance ratio.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    x : np.ndarray\n",
+    "        Feature matrix.\n",
+    "    y : np.ndarray\n",
+    "        Target vector.\n",
+    "    imbalance_ratio : float\n",
+    "        Desired minority class ratio (e.g., 0.1 for 10% minority).\n",
+    "    random_state : int\n",
+    "        Random seed.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    x_new, y_new : np.ndarray\n",
+    "        New dataset with induced class imbalance.\n",
+    "    \"\"\"\n",
+    "    unique, counts = np.unique(y, return_counts=True)\n",
+    "    print(f\"Class distribution BEFORE imbalance: {dict(zip(unique, counts))}\")\n",
+    "\n",
+    "    # Identify majority and minority classes\n",
+    "    class_counts = dict(zip(unique, counts))\n",
+    "    majority_class = unique[np.argmax(counts)]\n",
+    "    minority_class = unique[np.argmin(counts)]\n",
+    "    idx_major = np.where(y == majority_class)[0]\n",
+    "    idx_minor = np.where(y == minority_class)[0]\n",
+    "\n",
+    "    current_ratio = len(idx_minor) / (len(idx_major) + len(idx_minor))\n",
+    "    print(f\"Current minority ratio: {current_ratio:.4f}, Desired: {imbalance_ratio}\")\n",
+    "\n",
+    "    rng = np.random.RandomState(random_state)\n",
+    "\n",
+    "    # CASE 1: UNDERSAMPLING (if desired ratio < current)\n",
+    "    if imbalance_ratio < current_ratio:\n",
+    "        n_major = len(idx_major)\n",
+    "        n_minor_new = int(n_major * imbalance_ratio / (1 - imbalance_ratio))\n",
+    "        n_minor_new = min(len(idx_minor), n_minor_new)\n",
+    "\n",
+    "        idx_minor_sampled = rng.choice(idx_minor, size=n_minor_new, replace=False)\n",
+    "        idx_combined = np.concatenate([idx_major, idx_minor_sampled])\n",
+    "        rng.shuffle(idx_combined)\n",
+    "        x_new, y_new = x[idx_combined], y[idx_combined]\n",
+    "\n",
+    "    # CASE 2: OVERSAMPLING (if desired ratio > current)\n",
+    "    else:\n",
+    "        # Use SMOTE or other oversampler to create synthetic minority points\n",
+    "        smote = SMOTE(sampling_strategy=imbalance_ratio, random_state=random_state)\n",
+    "        x_new, y_new = smote.fit_resample(x, y)\n",
+    "\n",
+    "    # Log final distribution\n",
+    "    final_counts = dict(Counter(y_new))\n",
+    "    print(f\"Class distribution AFTER imbalance: {final_counts}\")\n",
+    "    print(f\"Total samples: {len(y_new)}\\n\")\n",
+    "    return x_new, y_new\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f8c78e36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class distribution BEFORE imbalance: {0: 1500, 1: 100}\n",
+      "Current minority ratio: 0.0625, Desired: 0.1\n",
+      "Class distribution AFTER imbalance: {0: 1500, 1: 150}\n",
+      "Total samples: 1650\n",
+      "\n",
+      "Class 0: 1500 Class 1: 150\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.randn(1600, 10)\n",
+    "y = np.array([0]*1500 + [1]*100)\n",
+    "x_imb, y_imb = _introduce_class_imbalance(x, y, imbalance_ratio=0.1)\n",
+    "print('Class 0:', np.sum(y_imb == 0), 'Class 1:', np.sum(y_imb == 1))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "396dc4f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
