Computer Syncrhonisation Complete

--- a/notebooks/processed_data_testing.ipynb
+++ b/notebooks/processed_data_testing.ipynb
@@ -11,10 +11,10 @@
      "output_type": "stream",
      "text": [
       "✅ Import paths added:\n",
-      " - /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit\n",
-      " - /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/src\n",
+      " - C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\n",
+      " - C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\src\n",
       "\n",
-      "📁 Using processed data root: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed\n",
+      "📁 Using processed data root: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\n",
       "\n",
       "📦 Discovered processed datasets:\n",
       "  PD: 14 datasets found → ['0001.gmsc', '0002.taiwan_creditcard', '0003.vehicle_loan', '0004.lendingclub', '0005.Case Study', '0006.myhom', '0007.hackerearth', '0008.cobranded', '0009.german', '0010.bank_status', '0011.thomas', '0012.loan_default', '0013.home_credit', '0014.hmeq']\n",
@@ -25,7 +25,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0001.gmsc [PD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/pd/0001.gmsc\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\pd\\0001.gmsc\n",
       "🧮 Samples: 150000 | Num: 10 | Cat: 0\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -43,7 +43,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0002.taiwan_creditcard [PD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/pd/0002.taiwan_creditcard\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\pd\\0002.taiwan_creditcard\n",
       "🧮 Samples: 30000 | Num: 23 | Cat: 0\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -61,7 +61,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0003.vehicle_loan [PD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/pd/0003.vehicle_loan\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\pd\\0003.vehicle_loan\n",
       "🧮 Samples: 233154 | Num: 32 | Cat: 3\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -80,7 +80,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0004.lendingclub [PD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/pd/0004.lendingclub\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\pd\\0004.lendingclub\n",
       "🧮 Samples: 9578 | Num: 12 | Cat: 1\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -98,7 +98,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0005.Case Study [PD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/pd/0005.Case Study\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\pd\\0005.Case Study\n",
       "🧮 Samples: 150000 | Num: 10 | Cat: 1\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -116,7 +116,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0006.myhom [PD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/pd/0006.myhom\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\pd\\0006.myhom\n",
       "🧮 Samples: 7000 | Num: 7 | Cat: 1\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -134,7 +134,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0007.hackerearth [PD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/pd/0007.hackerearth\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\pd\\0007.hackerearth\n",
       "🧮 Samples: 532428 | Num: 35 | Cat: 8\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -152,7 +152,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0008.cobranded [PD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/pd/0008.cobranded\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\pd\\0008.cobranded\n",
       "🧮 Samples: 80000 | Num: 47 | Cat: 0\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -170,7 +170,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0009.german [PD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/pd/0009.german\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\pd\\0009.german\n",
       "🧮 Samples: 999 | Num: 7 | Cat: 13\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -188,7 +188,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0010.bank_status [PD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/pd/0010.bank_status\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\pd\\0010.bank_status\n",
       "🧮 Samples: 100000 | Num: 16 | Cat: 0\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -206,7 +206,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0011.thomas [PD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/pd/0011.thomas\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\pd\\0011.thomas\n",
       "🧮 Samples: 1225 | Num: 12 | Cat: 2\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -228,11 +228,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/.venv/lib/python3.9/site-packages/numpy/core/fromnumeric.py:88: RuntimeWarning: overflow encountered in reduce\n",
+      "c:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\.venv\\lib\\site-packages\\numpy\\core\\fromnumeric.py:88: RuntimeWarning: overflow encountered in reduce\n",
       "  return ufunc.reduce(obj, axis, dtype, out, **passkwargs)\n",
-      "/Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/.venv/lib/python3.9/site-packages/numpy/lib/nanfunctions.py:1741: RuntimeWarning: invalid value encountered in subtract\n",
+      "c:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\.venv\\lib\\site-packages\\numpy\\lib\\nanfunctions.py:1741: RuntimeWarning: invalid value encountered in subtract\n",
       "  np.subtract(arr, avg, out=arr, casting='unsafe', where=where)\n",
-      "/Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/.venv/lib/python3.9/site-packages/numpy/lib/nanfunctions.py:1746: RuntimeWarning: overflow encountered in multiply\n",
+      "c:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\.venv\\lib\\site-packages\\numpy\\lib\\nanfunctions.py:1746: RuntimeWarning: overflow encountered in multiply\n",
       "  sqr = np.multiply(arr, arr, out=arr, where=where)\n"
      ]
     },
@@ -242,7 +242,7 @@
      "text": [
       "\n",
       "📦 Dataset: 0012.loan_default [PD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/pd/0012.loan_default\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\pd\\0012.loan_default\n",
       "🧮 Samples: 105471 | Num: 759 | Cat: 0\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -261,7 +261,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0013.home_credit [PD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/pd/0013.home_credit\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\pd\\0013.home_credit\n",
       "🧮 Samples: 307511 | Num: 104 | Cat: 16\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -279,7 +279,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0014.hmeq [PD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/pd/0014.hmeq\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\pd\\0014.hmeq\n",
       "🧮 Samples: 5960 | Num: 10 | Cat: 2\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -297,7 +297,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0001.heloc [LGD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/lgd/0001.heloc\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\lgd\\0001.heloc\n",
       "🧮 Samples: 67898 | Num: 9 | Cat: 0\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -316,7 +316,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0002.loss2 [LGD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/lgd/0002.loss2\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\lgd\\0002.loss2\n",
       "🧮 Samples: 4638 | Num: 39 | Cat: 23\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -335,7 +335,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0003.axa [LGD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/lgd/0003.axa\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\lgd\\0003.axa\n",
       "🧮 Samples: 2545 | Num: 2 | Cat: 0\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -354,7 +354,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0004.base_model [LGD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/lgd/0004.base_model\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\lgd\\0004.base_model\n",
       "🧮 Samples: 762 | Num: 114 | Cat: 88\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -375,7 +375,7 @@
       "======================================================================\n",
       "\n",
       "📦 Dataset: 0005.base_modelisation [LGD]\n",
-      "📁 Path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/processed/lgd/0005.base_modelisation\n",
+      "📁 Path: C:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\processed\\lgd\\0005.base_modelisation\n",
       "🧮 Samples: 594 | Num: 179 | Cat: 77\n",
       "\n",
       "🎯 Target Summary:\n",
@@ -435,7 +435,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "b3c2a9bf-df81-4634-96eb-7109db81eca7",
+       "ref": "74bf91e3-3a26-4194-a571-a7b34cad671a",
        "rows": [
         [
          "0",
@@ -953,7 +953,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.14.0)",
    "language": "python",
    "name": "python3"
   },
@@ -967,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
