--- a/notebooks/raw_data_testing.ipynb
+++ b/notebooks/raw_data_testing.ipynb
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Added repo root to sys.path: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit\n",
-      "📁 Using raw data root: /Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/data/raw\n",
+      "✅ Added repo root to sys.path: c:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\n",
+      "📁 Using raw data root: c:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\data\\raw\n",
       "📦 Discovered datasets:\n",
       "  PD: 14 datasets found → ['0001.gmsc', '0002.taiwan_creditcard', '0003.vehicle_loan', '0004.lendingclub', '0005.Case Study', '0006.myhom', '0007.hackerearth', '0008.cobranded', '0009.german', '0010.bank_status', '0011.thomas', '0012.loan_default', '0013.home_credit', '0014.hmeq']\n",
       "  LGD: 5 datasets found → ['0001.heloc', '0002.loss2', '0003.axa', '0004.base_model', '0005.base_modelisation']\n",
@@ -102,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/src/data/raw_data_exploration.py:39: DtypeWarning: Columns (19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "c:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\src\\data\\raw_data_exploration.py:39: DtypeWarning: Columns (19) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  self.df = pd.read_csv(self.file_path)\n"
      ]
     },
@@ -160,7 +160,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/src/data/raw_data_exploration.py:39: DtypeWarning: Columns (135,204,274,417) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "c:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\src\\data\\raw_data_exploration.py:39: DtypeWarning: Columns (135,204,274,417) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  self.df = pd.read_csv(self.file_path)\n"
      ]
     },
@@ -200,7 +200,21 @@
       "\n",
       "======================================================================\n",
       "🔍 Inspecting 0001.heloc [LGD]\n",
-      "======================================================================\n",
+      "======================================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\U0152019\\OneDrive - KU Leuven\\PhD Documents\\Projects\\1. TabPFN\\TabPFNCredit\\src\\data\\raw_data_exploration.py:39: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  self.df = pd.read_csv(self.file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "🔍 Dataset: 0001.heloc  |  Task: LGD\n",
       "📊 Shape: 67898 rows × 17 columns\n",
       "🧩 Dtypes: {dtype('float64'): 14, dtype('O'): 3}\n",
@@ -211,21 +225,7 @@
       "\n",
       "======================================================================\n",
       "🔍 Inspecting 0002.loss2 [LGD]\n",
-      "======================================================================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/anderas/Documents/PhD/Projects/1. TabPFN/TabPFNCredit/src/data/raw_data_exploration.py:39: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  self.df = pd.read_csv(self.file_path)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "======================================================================\n",
       "🔍 Dataset: 0002.loss2  |  Task: LGD\n",
       "📊 Shape: 4802 rows × 72 columns\n",
       "🧩 Dtypes: {dtype('float64'): 43, dtype('O'): 25, dtype('int64'): 4}\n",
@@ -322,7 +322,7 @@
          "type": "float"
         }
        ],
-       "ref": "3b59aae2-fe10-4c5a-a36b-0d976c1584f5",
+       "ref": "6f30dbb6-5210-4f92-a265-6cb3cbfa7cf4",
        "rows": [
         [
          "0",
@@ -932,7 +932,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.14.0)",
    "language": "python",
    "name": "python3"
   },
@@ -946,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
